<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

       
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_title_label"
        style="?android:listSeparatorTextViewStyle" />
    
    <EditText
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title_hint" />
    
    <CheckBox 
        android:id="@+id/task_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/task_completed_label" />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_note_label"
        style="?android:listSeparatorTextViewStyle" />
    
    <EditText
        android:id="@+id/task_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_note_hint" />

</LinearLayout>
